Removed padding from App component to resolve unnecessary overflow

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,12 +8,11 @@ html, body, div.App  {
 div.App {
   background-color: #090979;
   font-family: 'Turret Road', cursive;
-  padding: 5%;
-  height: 95%;
-  width: 95%;
+  height: 100%;
+  width: 100%;
 }
 
 /* Set uniform color for all text in div.app*/
-div.App a, div.App a:visited, div.App h1, div.App h3, div.App h4, div.App h5,div.App h6, div.App p, div.App span {
+div.App, div.App a, div.App a:hover {
   color: #090979;
 }
